src/test/ui/const-generics/const-param-type-depends-on-type-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/const-param-type-depends-on-type-param.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0741]: the types of const generic parameters must derive `PartialEq` and `Eq`
  --> $DIR/const-param-type-depends-on-type-param.rs:9:34
   |
LL | pub struct Dependent<T, const X: T>([(); X]);
   |                                  ^ `T` doesn't derive both `PartialEq` and `Eq`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0741`.
